# pkru-safe-bench

./: .gitignore  Cargo.toml  README.md
benches/: my_benchmark.rs
libtrusted/: Cargo.toml  build.rs
libtrusted/src/: lib.rs  untrusted.c
libuntrusted/: Cargo.toml
libuntrusted/src/: lib.rs  untrusted.c
src/: main.rs
