[package]
name = "pkrusafe-bench"
version = "0.1.0"
authors = ["Paul Kirth <pk1574@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libuntrusted = { path = "libuntrusted" }
libtrusted = { path = "libtrusted" }
clap = "*"
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.dev]
lto = true
incremental = false

[profile.release]
lto = true
incremental = false
