[package]
name = "pkrusafe-bench"
version = "0.1.0"
authors = ["Paul Kirth <pk1574@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libuntrusted = { path = "libuntrusted" }
libtrusted = { path = "libtrusted" }
clap = "2.33.3"
csv = { version = "0.15.0" }
serde = { version = "1.0.126", features = ["derive"] }
rustc-serialize = "0.3.24"
mpk_protector = { git = "https://github.com/securesystemslab/pkru-safe-mpk-protector.git" }
pkmallocator = { git = "https://github.com/securesystemslab/pkru-safe-pkmallocator.git" }
pkalloc = { git = "https://github.com/securesystemslab/pkru-safe-pkalloc.git" }


[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "my_benchmark"
harness = false

[profile.dev]
opt-level =1
lto = true
incremental = false
codegen-units = 1

[profile.release]
opt-level = 1
lto = true
incremental = false
codegen-units = 1
