[package]
name = "libuntrusted"
version = "0.1.0"
authors = ["Paul Kirth <pk1574@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpk_protector = { git = "https://github.com/securesystemslab/pkru-safe-mpk-protector.git" }
pkmallocator = { git = "https://github.com/securesystemslab/pkru-safe-pkmallocator.git" }
pkalloc = { git = "https://github.com/securesystemslab/pkru-safe-pkalloc.git" }
mpk = { git = "https://github.com/securesystemslab/pkru-safe-mpk-libc.git" }

[build-dependencies]
cc = "1.0"
